terraform/main.tf
provider "aws" {
  region = "ap-south-1"
}

resource "aws_key_pair" "deployer" {
  key_name   = "docker-key-unique"
  public_key = file("${path.module}/docker-key.pub")  # ✅ Relative path
}

resource "aws_security_group" "allow_web_ssh" {
  name        = "allow_web_ssh_unique"
  description = "Allow HTTP and SSH"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}


resource "aws_instance" "docker_app" {
  ami                    = "ami-03bb6d83c60fc5f7c"  # ✅ Ubuntu AMI
  instance_type          = "t2.micro"
  key_name               = aws_key_pair.deployer.key_name
  vpc_security_group_ids = [aws_security_group.allow_web_ssh.id]

  user_data = <<-EOF
              #!/bin/bash
              apt-get update -y
              apt-get install -y docker.io
              systemctl start docker
              docker run -d -p 80:3000 ksingh787/hello-app
              EOF

  tags = {
    Name = "DockerAppServer"
  }
}
